[package]
name = "gemini"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gngpp/gemini"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.23", features = ["stream"] }
tokio = { version = "1.35.1", default-features=false, features=['io-util', "sync", 'macros'] }
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = { version = "0.4.24" }
worker = { version = "0.0.18" }
async-stream = { version = "0.3.5" }
futures-util = { version = "0.3.30" }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
